# midi-cv-firmware

./: Cargo.toml  README.md
src/: main.rs
