[package]
name = "midi-cv"
version = "0.1.0"
authors = ["Mendelt Siebenga <msiebenga@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.11"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"
stm32f1xx-hal = {version = "0.5.3", features = ["rt", "stm32f103", "medium"]}
nb = "0.1.2"

embedded-midi = "0.0.1"
ad5668 = "0.0.1"
